--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,8 @@
-/* TODO: UNSUREBUT WE MIGHT BE USING THE WRONG TAILWIND VERSION, WE SHOULD USE LATEST */
-
+@import url("https://fonts.googleapis.com/css2?family=Nata+Sans:wght@100..900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 /* Theme customization using @theme */
 @theme {
   /* Colors */
@@ -13,13 +13,13 @@
   --color-custom-gray: #ebecec;
 
   /* Fonts */
-  /* TODO: ADD PERSONALIZED FONTS */
+  --font-natasans: "Nata Sans", sans-serif;
 }
 
 /* Refer to below on how we can use default fonts for automated fonts */
-/* @layer base {
+@layer base {
   html {
-    font-family: var(--font-sora, 'Sora', sans-serif);
+    font-family: var(--font-natasans, "Nata Sans", sans-serif);
   }
   h1,
   h2,
@@ -27,6 +27,6 @@
   h4,
   h5,
   h6 {
-    font-family: var(--font-manrope, 'Manrope', sans-serif);
+    font-family: var(--font-natasans, "Nata Sans", sans-serif);
   }
-} */
+}
